update javafx dockerfile